// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hello components: Hello1 should be rendered correctly 1`] = `
<p>
  Just... Hello world! This is a first hello view
</p>
`;

exports[`Hello components: Hello2 should be rendered correctly 1`] = `
<p>
  Just... Hello world! This is a second hello view
</p>
`;
